--- a/project/CNPM/KhachHang/templates/KhachHang/home_KH.html
+++ b/project/CNPM/KhachHang/templates/KhachHang/home_KH.html
@@ -39,7 +39,7 @@
                   <li><a class="dropdown-item" href="{% url 'danh_gia_nguoi_dung' %}">Đánh giá người dùng</a></li>
                   <li><a class="dropdown-item" href="{% url 'giao_dien_khach_hang' %}">Tài khoản</a></li>
                   <li><hr class="dropdown-divider"></li>
-                  <li><a class="dropdown-item" href="{% url 'thong_tin_khac' %}">Thông tin khác</a></li>
+                  <li><a class="dropdown-item" href="{% url 'quan_ly_lich_hen' %}">Quản lý lịch hẹn</a></li>
                 </ul>
               </li>
             </ul>
