--- a/project/CNPM/KhachHang/templates/danh_gia_nguoi_dung.html
+++ b/project/CNPM/KhachHang/templates/danh_gia_nguoi_dung.html
@@ -46,7 +46,7 @@
             <li><a class="dropdown-item" href="{% url 'dang_ky_kham_benh' %}">Đăng ký khám bệnh</a></li>
             <li><a class="dropdown-item" href="{% url 'danh_gia_nguoi_dung' %}">Đánh giá người dùng</a></li>
             <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="{% url 'thong_tin_khac' %}">Thông tin khác</a></li>
+            <li><a class="dropdown-item" href="{% url 'quan_ly_lich_hen' %}">Quản lí lịch hẹn</a></li>
           </ul>
         </li>
       </ul>
