--- a/project/CNPM/KhachHang/templates/dang_ky_kham_benh.html
+++ b/project/CNPM/KhachHang/templates/dang_ky_kham_benh.html
@@ -71,7 +71,7 @@
                         <li><a class="dropdown-item" href="{% url 'dang_ky_kham_benh' %}">Đăng ký khám bệnh</a></li>
                         <li><a class="dropdown-item" href="{% url 'danh_gia_nguoi_dung' %}">Đánh giá người dùng</a></li>
                         <li><hr class="dropdown-divider"></li>
-                        <li><a class="dropdown-item" href="{% url 'thong_tin_khac' %}">Thông tin khác</a></li>
+                        <li><a class="dropdown-item" href="{% url 'quan_ly_lich_hen' %}">Quản lí lịch hẹn</a></li>
                       </ul>
                     </li>
                   </ul>
@@ -109,7 +109,7 @@
 <main class="mt-1 pt-1">
   <div class="container">
       <!-- Heading -->
-      <h1 class="my-5 text-center" type="submit" style="color: rgba(7, 78, 35, 0.82)" >Đăng kí khám bệnh</h1>
+      <h1 class="my-5 text-center" style="color: rgba(7, 78, 35, 0.82)" >Đăng kí khám bệnh</h1>
       <!--Grid row-->
       <div class="row">
           <!--Grid column-->
@@ -218,7 +218,7 @@
                         <label class="form-check-label" for="doctor4"> Bác sĩ Võ Hùng</label>
                     </div>
                     <div class="form-check">
-                      <input class="form-check-input" type="radio" name="doctor_name" id="doctor5" value="Bùi Minh Tân " />
+                      <input class="form-check-input" type="radio" name="doctor_name" id="doctor5" value="Bùi Minh Tân" />
                       <label class="form-check-label" for="doctor5"> Bác sĩ Bùi Minh Tân </label>
                   </div>
                   <div class="form-check">
@@ -226,11 +226,15 @@
                     <label class="form-check-label" for="doctor6"> Bác sĩ Võ Hạnh Nhi </label>
                 </div>
                 <!-- Ô nhập tên bác sĩ khác -->
+                <div class="form-check">
+                  <input class="form-check-input" type="radio" name="doctor_name" id="other_doctor" value="other" />
+                      <label class="form-check-label" for="other_doctor">Bác sĩ khác</label>
+                  </div>
                     <div id="doctor_input" class="form-outline mb-4" style="display: none;">
                       <input type="text" class="form-control" name="doctor" placeholder="Nhập tên bác sĩ mong muốn..." />
                     </div>
                   </div>
-                </form>  
+                 
                   <p class="mb-0">
                     Ghi chú cho nhân viên( nếu có):
                 </p>
@@ -242,10 +246,8 @@
                       </div>                    
                   <hr class="mb-4" />                    
   <!-- Thông báo -->             
-              <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#exampleModal" 
-                                  style="background-color:rgb(13, 120, 72);" >Đăng kí khám bệnh
+  <button type="submit" class="btn btn-primary" style="background-color:rgb(13, 120, 72);">Đăng kí khám bệnh</button>
 
-              </button>
    <!-- Modal -->
 <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
   <div class="modal-dialog">
@@ -281,26 +283,21 @@
                           <h6 class="my-0">Trường hợp hủy đăng ký khám (trước 7 ngày )
                             được hoàn lại tiền khám nếu thanh toán trước, từ 3 - 6 ngày hoàn 75% phí trả 
                             trước, trường hợp còn lại sẽ không hoàn phí thanh toán trước.</h6>
-
+                          </li>
                   <li class="list-group-item d-flex justify-content-between">
                       <div>
                           <h6 class="my-0"> Khách hàng có thể 
                             chọn bác sĩ thú y, nếu không chọn bác sĩ thú y thì nhân viên sẽ sắp xếp cho 1 
-                            bác sĩ cụ thể trước khi đến khám.</h6>
-
-                          
+                            bác sĩ cụ thể trước khi đến khám.</h6>    
                   </li>
                   <li class="list-group-item d-flex justify-content-between">
                     <div>
                         <h6 class="my-0"> Hotline: 0675048574 - Chuyên viên tư vấn </span>
                   </li>
              </ul>
-              </form>
-
           </div>
-
-
   </div>
+</from>
 </main>
 
 </div>
@@ -353,6 +350,12 @@
           radio.addEventListener("change", toggleDoctorInput);
       });
   });
+  document.querySelectorAll('input[name="doctor_name"]').forEach((elem) => {
+    elem.addEventListener("change", function() {
+        document.getElementById("doctor_input").style.display = this.value === "other" ? "block" : "none";
+    });
+});
+
 </script>
 
        </body>
