--- a/project/CNPM/KhachHang/templates/giao_dien_khach_hang.html
+++ b/project/CNPM/KhachHang/templates/giao_dien_khach_hang.html
@@ -52,7 +52,7 @@
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
 
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>     
+              <a class="nav-link active" aria-current="page" href="{%'giao_dien_khach_hang'%}">Home</a>     
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Khách Hàng
@@ -62,7 +62,7 @@
                 <li><a class="dropdown-item" href="{% url 'quan_ly_thu_cung' %}">Quản lý danh sách thú cưng</a></li>
                 <li><a class="dropdown-item" href="{% url 'dang_ky_kham_benh' %}">Đăng ký khám bệnh</a></li>
                 <li><a class="dropdown-item" href="{% url 'danh_gia_nguoi_dung' %}">Đánh giá người dùng</a></li>
-                <li><a class="dropdown-item" href="{% url 'thong_tin_khac' %}">Thông tin khác</a></li>
+                <li><a class="dropdown-item" href="{% url 'quan_ly_lich_hen' %}">Quản lí lịch hẹn</a></li>
               </ul>
             </li>
           </ul>
