--- a/project/CNPM/Nhanvien/templates/Nhanvien/base.html
+++ b/project/CNPM/Nhanvien/templates/Nhanvien/base.html
@@ -91,16 +91,16 @@
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link {% if request.resolver_match.url_name == 'booking' %}active{% endif %}" 
-                           href="{% url 'booking' %}">Quản lý Booking</a>
+                <ul class="navbar-nav d-flex flex-row"> <!-- Sử dụng flex-row để hiển thị ngang -->
+                    <li class="nav-item me-3"> <!-- Tạo khoảng cách giữa các mục -->
+                        <a class="nav-link {% if request.resolver_match.url_name == 'list_bookings' %}active{% endif %}" 
+                           href="{% url 'list_bookings' %}">Quản lý Booking</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item me-3">
                         <a class="nav-link {% if request.resolver_match.url_name == 'pet' %}active{% endif %}" 
                            href="{% url 'pet' %}">Quản lý Thú cưng</a>
                     </li>
-                    <li class="nav-item">
+                    <li class="nav-item me-3">
                         <a class="nav-link {% if request.resolver_match.url_name == 'schedule' %}active{% endif %}" 
                            href="{% url 'schedule' %}">Sắp lịch bác sĩ</a>
                     </li>
@@ -110,6 +110,7 @@
                     </li>
                 </ul>
             </div>
+            
         </div>
     </nav>
 
