--- a/project/CNPM/Nhanvien/templates/Nhanvien/home_NV.html
+++ b/project/CNPM/Nhanvien/templates/Nhanvien/home_NV.html
@@ -15,7 +15,7 @@
 </div>
 <div class="row text-center mt-5">
     <div class="col-md-3">
-        <a href="{% url 'booking' %}" class="btn btn-primary btn-lg w-100">Quản lý Booking</a>
+        <a href="{% url 'list_bookings' %}" class="btn btn-primary btn-lg w-100">Quản lý Booking</a>
         <p>Hệ thống đặt chỗ, hủy chỗ, hoàn tiền.</p>
     </div>
     <div class="col-md-3">
