--- a/project/CNPM/Bacsi/templates/Bacsi/create.html
+++ b/project/CNPM/Bacsi/templates/Bacsi/create.html
@@ -1,7 +1,7 @@
 {% extends "Bacsi/base.html" %}
 
 {% block content %}
-<h2>Thêm hồ sơ bệnh án</h2>
+<h2 class="text-center fw-bold" style="color: #218838;">Thêm hồ sơ bệnh án</h2>
 <form method="post">
     {% csrf_token %}
     <label for="booking_id">ID Đặt lịch:</label>
