--- a/project/CNPM/Bacsi/templates/Bacsi/home.html
+++ b/project/CNPM/Bacsi/templates/Bacsi/home.html
@@ -47,6 +47,6 @@
     {% endif %}
 
     <div class="container mt-5">
-        <h1>Chào mừng đến với hệ thống Bác sĩ thú y</h1>
+        <h1 class="text-center fw-bold" style="color: #218838;">Chào mừng đến với hệ thống Bác sĩ thú y</h1>
     </div>
 {% endblock content %}
