--- a/project/CNPM/Bacsi/templates/Bacsi/medical_records.html
+++ b/project/CNPM/Bacsi/templates/Bacsi/medical_records.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h2>Ghi nhận hồ sơ khám bệnh</h2>
+    <h2 class="text-center fw-bold" style="color: #218838;">Ghi nhận hồ sơ khám bệnh</h2>
     {% if success_message %}
         <div class="alert alert-success">{{ success_message }}</div>
         <div class="mt-3">
