--- a/project/CNPM/KhachHang/templates/KhachHang/pet_list.html
+++ b/project/CNPM/KhachHang/templates/KhachHang/pet_list.html
@@ -144,7 +144,7 @@ main {
             <div class="col-md-4 care">
                 <h4>Đánh Giá Của Khách Hàng</h4>
                 <ul>
-                    <li><a href="#">Nhấn Vào Để Xem</a></li>
+                    <li><a href="{% url 'danh_gia_nguoi_dung' %}">Nhấn Vào Để Xem</a></li>
                 </ul>
             </div>
             <div class="col-md-4">
