--- a/project/CNPM/Nhanvien/templates/Nhanvien/schedule.html
+++ b/project/CNPM/Nhanvien/templates/Nhanvien/schedule.html
@@ -3,7 +3,7 @@
 {% block title %}Quản lý Lịch Khám Bác Sĩ{% endblock %}
 
 {% block content %}
-    <h1 class="my-5 text-center">Danh sách Lịch Khám Bác Sĩ</h1>
+<h2 class="text-center fw-bold" style="color: #218838;">Danh sách Lịch Khám Bác Sĩ</h1>
 
     <table class="table table-bordered table-striped">
         <thead>
