--- a/project/CNPM/home/templates/home/thucan.html
+++ b/project/CNPM/home/templates/home/thucan.html
@@ -1003,7 +1003,7 @@
                 <h4 class="fw-bold float-endo">Đánh Giá Của Khách Hàng</h4>
                 <div>
                   <ul>
-                    <li><a href="Xem them"> Nhấn Vào Để Xem </a></li>
+                    <li><a href="{% url 'danh_gia_nguoi_dung' %}"> Nhấn Vào Để Xem </a></li>
                   </ul>
                 </div>
               </div>
