--- a/project/CNPM/Nhanvien/templates/Nhanvien/add_pet.html
+++ b/project/CNPM/Nhanvien/templates/Nhanvien/add_pet.html
@@ -3,7 +3,7 @@
 {% block title %}Thêm Hồ Sơ Nhập Viện Thú Cưng{% endblock %}
 
 {% block content %}
-    <h1 class="my-5 text-center">Thêm Hồ Sơ Nhập Viện Thú Cưng</h1>
+<h2 class="text-center fw-bold" style="color: #218838;">Thêm Hồ Sơ Nhập Viện Thú Cưng</h1>
     <form method="POST">
         {% csrf_token %}
         <div class="mb-3">
