--- a/project/CNPM/Nhanvien/templates/Nhanvien/add_room.html
+++ b/project/CNPM/Nhanvien/templates/Nhanvien/add_room.html
@@ -3,7 +3,7 @@
 {% block title %}Thêm Mới Phòng Khám{% endblock %}
 
 {% block content %}
-    <h1 class="my-5 text-center">Thêm Mới Phòng Khám</h1>
+<h2 class="text-center fw-bold" style="color: #218838;">Thêm Mới Phòng Khám</h1>
     <form method="POST">
         {% csrf_token %}
         <div class="mb-3">
