--- a/project/CNPM/Nhanvien/templates/Nhanvien/home_NV.html
+++ b/project/CNPM/Nhanvien/templates/Nhanvien/home_NV.html
@@ -70,10 +70,7 @@ main {
                         <a class="nav-link {% if request.resolver_match.url_name == 'pet' %}active{% endif %}" 
                            href="{% url 'pet' %}">Quản lý Thú cưng</a>
                     </li>
-                    <li class="nav-item me-3">
-                        <a class="nav-link {% if request.resolver_match.url_name == 'schedule' %}active{% endif %}" 
-                           href="{% url 'schedule' %}">Sắp lịch bác sĩ</a>
-                    </li>
+                    
                     <li class="nav-item">
                         <a class="nav-link {% if request.resolver_match.url_name == 'room' %}active{% endif %}" 
                            href="{% url 'room' %}">Quản lý Chuồng</a>
@@ -94,7 +91,7 @@ main {
       <img src="{% static 'Nhanvien/images/base3.jpg'%}" width="200" height="300" alt="img">
       <img src="{% static 'Nhanvien/images/base4.jpg'%}" width="200" height="300" alt="img">
     </div>
-    <div class="row text-center mt-5">
+    <div class="row justify-content-center text-center mt-5">
         <div class="col-md-3">
             <a href="{% url 'list_bookings'%}" class="btn btn-primary btn-lg w-100">Quản lý Booking</a>
             <p>Hệ thống đặt chỗ, hủy chỗ, hoàn tiền.</p>
@@ -104,14 +101,11 @@ main {
             <p>Theo dõi thông tin thú cưng lưu chuồng.</p>
         </div>
         <div class="col-md-3">
-            <a href="{% url 'schedule'%}" class="btn btn-primary btn-lg w-100">Sắp lịch bác sĩ</a>
-            <p>Lịch khám bệnh, lịch chăm sóc.</p>
-        </div>
-        <div class="col-md-3">
             <a href="{% url 'room'%}" class="btn btn-primary btn-lg w-100">Quản lý Chuồng</a>
             <p>Thông tin chuồng hệ thống tìm kiếm.</p>
         </div>
     </div>
+    
   </main>
   
 <footer class="footer mt-5">
