--- a/project/CNPM/home/templates/home/home.html
+++ b/project/CNPM/home/templates/home/home.html
@@ -351,7 +351,7 @@
               <h4>Đánh Giá Của Khách Hàng</h4>
               <div>
                 <ul>
-                  <li><a href="Xem them"> Nhấn Vào Để Xem </a></li>
+                  <li><a href="{% url 'danh_gia_nguoi_dung' %}"> Nhấn Vào Để Xem </a></li>
                 </ul>
               </div>
             </div>
